--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
     gap: var(--spacing-small);
     padding-block: 2rem;
     width: min(95%, 70rem);
-    margin-inline: auto;
+    margin:0 auto;
   }
 
   article.testimonial:nth-child(1) {
