updated reviewer avatar border

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,9 @@ article.testimonial:nth-child(1) {
   background-repeat: no-repeat;
   background-position: top right 10%;
 }
-
+article.testimonial:nth-child(1) img {
+  border:3px solid var(--Purple-300);
+}
 article.testimonial:nth-child(2) {
   background-color: var(--Grey-500);
   color: var(--White);
@@ -132,7 +134,9 @@ article.testimonial:nth-child(4) {
   background-color: var(--Dark-blue);
   color: var(--White);
 }
-
+article.testimonial:nth-child(4) img {
+  border:3px solid var(--Purple-300);
+}
 article.testimonial:nth-child(5) {
   background-color: var(--White);
 }
